--- a/package.json
+++ b/package.json
@@ -1,11 +1,30 @@
 {
-  "name": "api_contabilidade",
+  "name": "mensageiros_reino_api_contabilidade",
   "version": "1.0.0",
-  "description": "API de contabilidade da IGREJA MENSAGEIROS DO REINO",
-  "main": "index.js",
+  "description": "API de contabilidade da igreja Asembleia Mensageiros do Reino",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon app.js"
   },
-  "author": "",
-  "license": "ISC"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/MenegazzoKennedy/API-CONTABILIDADE-MENSAGEIROS-DO-REINO.git"
+  },
+  "author": "Kennedy Menegazzo Mello de Carvalho",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/MenegazzoKennedy/API-CONTABILIDADE-MENSAGEIROS-DO-REINO/issues"
+  },
+  "homepage": "https://github.com/MenegazzoKennedy/API-CONTABILIDADE-MENSAGEIROS-DO-REINO#readme",
+  "dependencies": {
+    "dotenv": "^16.4.1",
+    "express": "^4.19.2",
+    "sequelize": "^6.35.2",
+    "sequelize-auto": "^0.8.8"
+  },
+  "devDependencies": {
+    "mysql2": "^3.9.1",
+    "nodemon": "^3.0.3"
+  }
 }
